[project]
name = "linmem"
version = "0.1.0"
description = "Local memory search CLI tool based on BM25 + LinearRAG (Tri-Graph + PageRank)"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "spacy>=3.6",
    "sentence-transformers",
    "python-igraph",
    "torch",
    "numpy",
    "pandas",
    "pyarrow",
]

[project.optional-dependencies]
pdf = ["pymupdf"]
llm = ["openai"]
dev = ["pytest>=7.0"]

[project.scripts]
linmem = "linmem.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linmem"]

[tool.pytest.ini_options]
markers = ["slow: requires ML models"]
testpaths = ["tests"]
